Changes for #501 - Add new ClinVarDao Add new ClinVarDaoMvStore Update VariantDataServiceImpl to require ClinVarDao Add new ClinVarWhiteListReader Add new MvStoreUtil.clinVarMapBuilder and MvStoreUtil.openClinVarMVMap methods