@@ -20,7 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.genome;
 
-import com.google.common.collect.ImmutableSet;
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -41,6 +40,7 @@ import org.monarchinitiative.exomiser.core.model.pathogenicity.*;
 
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.Set;
 
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -55,6 +55,8 @@ import static org.monarchinitiative.exomiser.core.model.frequency.FrequencySourc
 public class VariantDataServiceImplTest {
 
     private VariantDataServiceImpl instance;
+    @Mock
+    private ClinVarDao clinVarDao;
     @Mock
     private FrequencyDao defaultFrequencyDao;
     @Mock
@@ -92,6 +94,7 @@ public class VariantDataServiceImplTest {
     @BeforeEach
     public void setUp() {
         variant = buildVariantOfType(VariantEffect.MISSENSE_VARIANT);
+        Mockito.when(clinVarDao.getClinVarData(variant)).thenReturn(PATH_CLINVAR_DATA);
         Mockito.when(defaultPathogenicityDao.getPathogenicityData(variant)).thenReturn(PATH_DATA);
         Mockito.when(defaultFrequencyDao.getFrequencyData(variant)).thenReturn(FREQ_DATA);
         Mockito.when(localFrequencyDao.getFrequencyData(variant)).thenReturn(FrequencyData.empty());
@@ -101,6 +104,7 @@ public class VariantDataServiceImplTest {
         Mockito.when(svPathogenicityDao.getPathogenicityData(variant)).thenReturn(PathogenicityData.empty());
 
         instance = VariantDataServiceImpl.builder()
+                .clinVarDao(clinVarDao)
                 .defaultFrequencyDao(defaultFrequencyDao)
                 .localFrequencyDao(localFrequencyDao)
                 .defaultPathogenicityDao(defaultPathogenicityDao)
@@ -196,6 +200,7 @@ public class VariantDataServiceImplTest {
         // This will cause a UnnecessaryStubbingException to be thrown as the result of this stubbing is ignored, but
         // we're trying to test for exactly that functionality we're running with the MockitoJUnitRunner.Silent.class
         Mockito.when(defaultPathogenicityDao.getPathogenicityData(variant)).thenReturn(PathogenicityData.of(MutationTasterScore.of(1f)));
+        Mockito.when(clinVarDao.getClinVarData(variant)).thenReturn(ClinVarData.empty());
         PathogenicityData result = instance.getVariantPathogenicityData(variant, EnumSet.of(PathogenicitySource.MUTATION_TASTER));
         assertThat(result, equalTo(PathogenicityData.empty()));
     }
@@ -273,8 +278,13 @@ public class VariantDataServiceImplTest {
         Variant whiteListVariant = TestFactory.variantBuilder(3, 12345, "A", "C").build();
         Variant nonWhiteListVariant = TestFactory.variantBuilder(3, 12345, "G", "T").build();
 
-        VariantWhiteList whiteList = InMemoryVariantWhiteList.of(ImmutableSet.of(AlleleProtoAdaptor.toAlleleKey(whiteListVariant)));
-        VariantDataServiceImpl instance = VariantDataServiceImpl.builder().variantWhiteList(whiteList).build();
+        VariantWhiteList whiteList = InMemoryVariantWhiteList.of(Set.of(AlleleProtoAdaptor.toAlleleKey(whiteListVariant)));
+        VariantDataServiceImpl instance = VariantDataServiceImpl.builder()
+                .defaultFrequencyDao(defaultFrequencyDao)
+                .defaultPathogenicityDao(defaultPathogenicityDao)
+                .clinVarDao(clinVarDao)
+                .variantWhiteList(whiteList)
+                .build();
 
         assertThat(instance.variantIsWhiteListed(whiteListVariant), is(true));
         assertThat(instance.variantIsWhiteListed(nonWhiteListVariant), is(false));
